--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2 class="center-text">Where I've Lived and Worked</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
+      <h2 class="orange center-text"></h2>
         <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
