--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div id="online" class="col-6"></div>
       </div>
     </div>
-    <div id="mapDiv">
+    <!-- <div id="mapDiv">
       <h2 class="center-text">Where I've Lived and Worked</h2>
-    </div>
+    </div> -->
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text"></h2>
         <ul id="footerContacts" class="flex-box">
