indents in head fix

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <link href="css/css_boxes.css" rel="stylesheet">
   <link href="css/framework.css" rel="stylesheet">
   <!-- add an interactive Google Map to the resume!  -->
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-<script src="js/jQuery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <script src="js/jQuery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
 </head>
 <body>
